--- a/views/modal_dialog.tt
+++ b/views/modal_dialog.tt
@@ -16,7 +16,7 @@
     <div class="modal-dialog [% IF modal_large %]modal-lg[% END %]">
         <div class="modal-content">
         [% IF modal_with_form %]
-            <form class="form" [% modal_form_action && 'action="$modal_form_action"' %] method="[% modal_form_method || 'get' %]">
+            <form class="form" action="[% modal_form_action %]" method="[% modal_form_method || 'get' %]" target="[% modal_form_target || '_self' %]">
             [% IF modal_form_method == "post" %]
                 <input type="hidden" name="csrf_token" value="[% csrf_token %]">
             [% END %]
