--- a/views/layouts/content_with_menu.tt
+++ b/views/layouts/content_with_menu.tt
@@ -1,16 +1,16 @@
 <div class="row flex-nowrap">
-  [% PROCESS navigation/main_menu.tt %]
+  [% INCLUDE navigation/main_menu.tt %]
   <main class="[% main_class || 'main col-lg-10' %]">
     <div class="main__container">
       [%
       IF detail_header;
-        PROCESS snippets/header_detail.tt;
+        INCLUDE snippets/header_table_detail.tt;
       ELSE;
-        PROCESS snippets/header.tt;
+        INCLUDE snippets/header.tt;
       END;
       %]
       <div class="content-block">
-        [% PROCESS snippets/message_center.tt %]
+        [% INCLUDE snippets/message_center.tt %]
         [% content %]
       </div>
     </div>
