--- a/views/layouts/page_overview_name_only.tt
+++ b/views/layouts/page_overview_name_only.tt
@@ -46,7 +46,7 @@
     aside_buttons = [{
       type   = "link"
       target = url.page _ "/" _ add_path _ "/"
-      class  = "btn-default"
+      class  = "btn btn-default"
       label  = "Create " _ item_type
     }];
 -%]
