--- a/views/layouts/content_with_menu.tt
+++ b/views/layouts/content_with_menu.tt
@@ -9,7 +9,7 @@
         INCLUDE snippets/header.tt;
       END;
       %]
-      <div class="content-block">
+      <div class="content-block [% content_block_custom_classes %]">
         [% INCLUDE snippets/message_center.tt %]
         [% content %]
       </div>
