--- a/views/user/user_upload.tt
+++ b/views/user/user_upload.tt
@@ -42,11 +42,27 @@
     <div class="row">
       [% INCLUDE snippets/user_column_groups.tt column_class="col-lg-5" list_class="list--vertical list--checkboxes"; %]
     </div>
-    
-    [%-
-      back_url = url.page _ "/user_overview/";
-      INCLUDE navigation/button_bar.tt back_url=back_url submit_name="submit" submit_label="Save changes";
-    -%]
-    
+    [%
+      INCLUDE navigation/button_bar.tt
+        row_class = "row mt-5"
+        columns = [{
+          class = "col-sm-auto mb-3 mb-sm-0",
+          buttons = [{
+            type = "link",
+            class = "btn btn-cancel",
+            target = url.page _ "/user_overview/",
+            label = "Back"
+          }]
+        }, {
+          class = "col-sm-auto",
+          buttons = [{
+            type  = "button",
+            name  = "submit",
+            value = "submit",
+            class = "btn btn-default",
+            label = "Save changes"
+          }]
+        }];
+    %]
   </form>
 </div>
