--- a/views/user/user_request.tt
+++ b/views/user/user_request.tt
@@ -181,7 +181,7 @@
     aside_buttons = ! user.permission.useradmin ? [] : [{
       type    = "modal_button"
       modalId = "userModal"
-      class   = "btn-add"
+      class   = "btn btn-add"
       label   = "Add a user"
     }];
 %]
