--- a/views/navigation/table_topics_fields_menu.tt
+++ b/views/navigation/table_topics_fields_menu.tt
@@ -5,17 +5,17 @@
       buttons    = [{
         type   = "link",
         target = url.page _ "/table/" _ layout_edit.instance_id _ "/edit",
-        class  = "link link--plain" _ page == "table_edit" ? "link--active" : "",
+        class  = "link link--plain" _ (page == "table_edit" ? "link--active" : ""),
         label  = "Table"
       }, {
         type   = "link",
         target = url.page _ "/" _ layout_edit.identifier _ "/topics/",
-        class  = "link link--plain" _ page == "topics" ? "link--active" : "",
+        class  = "link link--plain" _ (page == "topics" ? "link--active" : ""),
         label  = "Topics"
       }, {
         type   = "link",
         target = url.page _ "/" _ layout_edit.identifier _ "/layout/",
-        class  = "link link--plain" _ page == "fields" ? "link--active" : "",
+        class  = "link link--plain" _ (page == "fields" ? "link--active" : ""),
         label  = "Fields"
       }];
   %]
