--- a/views/snippets/header_table_detail.tt
+++ b/views/snippets/header_table_detail.tt
@@ -28,9 +28,12 @@
             </li>
             [% END %]
             
-            [% IF user.permission.superadmin OR layout.user_can("layout") %]
+            [%
+              IF user.permission.superadmin OR layout.user_can("layout");
+                active_pages = ["table_edit", "topics", "layout"];
+            %]
             <li class="list__item">
-              <a href='[% url.page %]/table/[% layout_edit.instance_id %]/edit' class='link link--plain [% IF page == "table_edit" %]link--active[% END %]'>
+              <a href='[% url.page %]/table/[% layout_edit.instance_id %]/edit' class="link link--plain [% IF active_pages.grep(page).size %]link--active[% END %]">
                 <span>Edit table</span>
               </a>
             </li>
