--- a/views/topics.tt
+++ b/views/topics.tt
@@ -1,21 +1,86 @@
-<h2>Topics</h2>
-<p>
-    Topics are a way to group together related fields within a table. Once
-    fields are allocated to topics, they will be shown within these topics
-    when editing a record.
-</p>
-<p>
-    <a href="/[% layout.identifier %]/topic/0" class="btn btn-default" role="button">Add a topic</a>
-</p>
-<table class="table table-striped">
-    <tr>
-        <th></th>
-        <th>Name</th>
-    </tr>
-    [% FOREACH topic IN topics %]
-        <tr>
-            <td><a href="/[% layout.identifier %]/topic/[% topic.id %]">Edit</a></td>
-            <td>[% topic.name | html_entity %]</td>
-        </tr>
-    [% END %]
-</table>
+[%
+  # prepare table config
+  table_class    = 'table-striped';
+  table_dom      = 't';
+  table_order    = '[0,"asc"]';
+  table_language = '{"emptyTable": "No topics have been created yet."}';
+  
+  table_buttons = [{
+    label = "Edit topic",
+    link  = url.page _ "/" _ layout_obj.identifier _ "/topic/{topic_id}"
+  }];
+
+  table_columns = [{
+    name      = "Topic",
+    orderable = 1,
+    width     = "95%"
+  }];
+
+  rows = [];
+
+  FOREACH topic IN topics;
+    row = {
+      link_placeholders = {
+        topic_id = topic.id
+      }
+      fields = [{
+        type   = "link",
+        label  = topic.name,
+        filter = "html",
+        link   = url.page _ "/" _ layout_obj.identifier _ "/topic/{topic_id}"
+      }]
+    };
+
+    rows.push(row);
+  END;
+%]
+<div class="content-block__head row">
+  <div class="content-block__info col-lg-6">
+    <h2 class="content-block__title">
+      Edit Table
+    </h2>
+  </div>
+  [% INCLUDE navigation/table_topics_fields_menu.tt %]
+</div>
+
+<div class="content-block__main">
+  <div class="content-block__main-content">
+    <div class="card card--secundary">
+      <h4 class="card__title">
+        <span> Edit your topics </span>
+      </h4>
+      
+      <div class="card__body row">
+        <div class="card__content">
+          [% INCLUDE tables/basic_table.tt; %]
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <footer class="content-block__footer">
+    <div class="content-block__footer-container">
+      [%
+        INCLUDE navigation/button_bar.tt
+          row_class = "row"
+          columns   = [{
+            class   = "col-md-4 mb-3 mb-md-0",
+            buttons = [{
+              type   = "link",
+              target = url.page _ "/table/",
+              class  = "btn btn-cancel",
+              label  = "Back"
+            }]
+          }, {
+            class   = "col-md-8 d-md-flex justify-content-md-end align-items-center",
+            buttons = [{
+              type   = "link",
+              target = url.page _ "/" _ layout_obj.identifier _ "/topic/0",
+              class  = "btn btn-inverted btn-add",
+              label  = "Add a topic"
+            }]
+          }];
+      %]
+    </div>
+  </footer>
+</div>
