Add reordering, pagelength, lengthmenu and subfield options to basic table

--- a/views/tables/basic_cell_button.tt
+++ b/views/tables/basic_cell_button.tt
@@ -6,4 +6,5 @@
   <a href='[% url.page %][% link %]' class='link text-nowrap'>
     [% INCLUDE fields/sub/filter.tt value=label; %]
   </a>
+  [% INCLUDE snippets/subfield.tt; %]
 </td>
