--- a/views/tables/basic_cell_link.tt
+++ b/views/tables/basic_cell_link.tt
@@ -8,4 +8,5 @@
   <a href='[% url.page %][% link %]' class='[% link_class %]'>
     [% INCLUDE fields/sub/filter.tt value=label; %]
   </a>
+  [% INCLUDE snippets/subfield.tt; %]
 </td>
