--- a/views/tables/basic_table.tt
+++ b/views/tables/basic_table.tt
@@ -2,12 +2,34 @@
   tmplColumnConfig = '{_NAME_ORDERABLE_CLASSNAME_WIDTH},';
   tmplColumnButtonConfig = '{"name":"","orderable":false,"className":"min-tablet-l data-table__header--invisible"},';
 
-  columnConfig = '';
-  buttonConfig = '';
+  reorderConfig    = '';
+  pageLengthConfig = '';
+  lengthMenuConfig = '';
+  columnConfig     = '';
+  buttonConfig     = '';
   
   header_row = {
     fields = []
   };
+
+  IF table_reorder_rows;
+    reorderConfig = "\n" _ '    "rowReorder":{"snapX":true},';
+    columnConfig  = '{"name":"Position","orderable":true,"width":"30px","className":"reorder data-table__header--invisible"},';
+    
+    header_row.fields.push({
+      type   = "header"
+      label  = "Position"
+      filter = ""
+    });
+  END;
+
+  IF table_page_length;
+    pageLengthConfig = '"pageLength":' _  page_length _ ',';
+  END;
+
+  IF table_length_menu;
+    pageLengthConfig = '"lengthMenu":[10,25,50,100,200],';
+  END;
 
   # create table columns and column config for each requested column.
   FOREACH column in table_columns;
@@ -58,17 +80,39 @@
     label = "Toggle child row"
   });
 
+  rowCounter = 1;
+
   FOREACH row in rows;
-    # replace link placeholders
+    fieldCounter = 1;
+
     FOREACH field in row.fields;
-      NEXT IF !field.link OR !row.link_placeholders OR row.link_placeholders.empty;
-      FOREACH key in row.link_placeholders.keys;
-        field.link = field.link.replace('{' _ key _ '}', row.link_placeholders.$key);
+      # add hidden fields for row reordering
+      IF table_reorder_rows AND fieldCounter == 1;
+        row.fields.unshift({
+          type = "text",
+          label = "<span>" _ rowCounter _ "</span>"
+        });
+
+        field.sub_field  = "fields/hidden.tt";
+        field.sub_params = {
+          name  = "position",
+          value = rowCounter
+        };
       END;
+
+      # replace link placeholders
+      IF field.link AND row.link_placeholders AND !row.link_placeholders.empty;
+        FOREACH key in row.link_placeholders.keys;
+          field.link = field.link.replace('{' _ key _ '}', row.link_placeholders.$key);
+        END;
+      END;
+      
+      fieldCounter = fieldCounter + 1;
     END;
     
     # add empty field for screen overflow expand/collapse column
     row.fields.push({type = "text"});
+    rowCounter   = rowCounter + 1;
   END;
   
   table_config = '{
@@ -78,7 +122,7 @@
     "responsive":{
       "details":{"type":"column","target":-1}
     },
-    "scrollX":false,
+    "scrollX":false,_ROW_REORDER_PAGE_LENGTH_LENGTH_MENU
     "autoWidth":false,_SHOW_ALL_RECORDS
     "columns":[
       _COLUMNS
@@ -88,6 +132,9 @@
   }';
 
   table_config = table_config.replace('_SHOW_ALL_RECORDS', table_show_all_records ? "\n" _ '    "iDisplayLength":-1,' : '');
+  table_config = table_config.replace('_ROW_REORDER', reorderConfig);
+  table_config = table_config.replace('_PAGE_LENGTH', pageLengthConfig);
+  table_config = table_config.replace('_LENGTH_MENU', lengthMenuConfig);
   table_config = table_config.replace('_COLUMNS', columnConfig);
   table_config = table_config.replace('_BUTTONS', buttonConfig);
 %]
