--- a/views/navigation/table_topics_fields_menu.tt
+++ b/views/navigation/table_topics_fields_menu.tt
@@ -1,6 +1,7 @@
 <div class="content-block__aside col-lg-6">
   [%
     topics_active_pages = ["topics", "topic_add", "topic_edit"];
+    fields_active_pages = ["layouts", "layout"];
   
     INCLUDE snippets/button_list.tt
       list_class = "list--horizontal list--no-borders list--buttons"
@@ -17,7 +18,7 @@
       }, {
         type   = "link",
         target = url.page _ "/" _ layout_obj.identifier _ "/layout/",
-        class  = "link link--plain" _ (page == "fields" ? " link--active" : ""),
+        class  = "link link--plain" _ (fields_active_pages.grep(page).size ? " link--active" : ""),
         label  = "Fields"
       }];
   %]
